--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
+    "@ionic-native/camera": "^5.0.0-beta.14",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/sqlite": "^5.0.0-beta.21",
@@ -27,6 +28,7 @@
     "@ionic/angular": "4.0.0-beta.13",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.1",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
@@ -35,6 +37,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.5.0",
     "core-js": "^2.5.3",
+    "moment": "^2.22.2",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -73,7 +76,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
